2008-04-02	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/isd_connection.cpp:
	made readFromServer() have a timeout - fixes hung processes/threads on
	blocked connections (closes #1924390)

	* lib/src/ivs_connection.cpp:
	fill screen and scaled screen with black

	* ima/src/client.cpp:
	improved client-thread-destruction

	* ima/src/main_window.cpp:
	improved button-texts

	* ima/src/classroom_manager.cpp:
	* ima/src/classroom_manager.h:
	- removed obsolete functions
	- small optimizations by not using foreach

	* ica/src/system_service.cpp:
	use QString::toLocal8Bit() instead of QString::toUtf8() - hopefully
	fixes #1898070

	* ica/src/local_system_ica.cpp:
	use SHTDN_REASON_MAJOR_OTHER instead of SHTDN_REASON_MAJOR_SYSTEM

	* setup/src/dialogs.cpp:
	- removed obsolete userinfo.exe
	- misc fixes

	* ima/src/italc_side_bar.cpp:
	improved painting

	* setup/src/dialogs.cpp:
	* setup/src/dialogs.h:
	fixed confirmation-dialog when closing setup-window via Alt+F4 or
	close-button (closes #1912695)

2008-04-02	Andrei Krueger	<anc/at/iki/dot/fi>

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	drag and drop support for classroom manager (closes #1886602)

	* ica/resources/fi.ts:
	* lib/resources/fi.ts:
	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	updated Finnish localization-files

2008-03-31	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	fixed wrong mapping to framebuffer-coordinates

	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	* ima/src/main_window.cpp:
	always try to run demo-server on default-port 5858 - allows better
	firewall-configuration in many places

2008-03-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* italc.spec.in:
	applied patch to build properly/better on recent openSUSE releases by  
	Lars Vogdt <lars/at/linux-schulserve/dot/.de>

2008-03-27	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
